# aiomcdr

./: .gitignore  README.md  main.py  pyproject.toml
aiomcdr/: __init__.py  __main__.py  typing.py
aiomcdr/app/: config.py  server.py  server_interface.py  service.py
aiomcdr/app/command/: command_source.py
aiomcdr/app/handler/: abstract_server_handler.py  server_handler_manager.py
aiomcdr/app/handler/impl/: __init__.py  abstract_minecraft_handler.py  basic_handler.py  beta18_handler.py  bukkit14_handler.py  bukkit_handler.py  bungeecord_handler.py  cat_server_handler.py  forge_handler.py  vanilla_handler.py  velocity_handler.py  waterfall_handler.py
aiomcdr/app/info_reactor/: abstract_info_reactor.py  info.py  info_reactor_manager.py  server_information.py
aiomcdr/app/info_reactor/impl/: __init__.py  general_reactor.py  player_reactor.py  server_reactor.py
aiomcdr/app/permission/: permission_level.py  permission_manager.py
aiomcdr/console/: __init__.py  service.py
aiomcdr/event/: info.py  lifetime.py  player.py
aiomcdr/static/: path.py
plugins/: test copy.py  test.py
plugins/MCDR-HeadOnJoin/: __init__.py  mcdreforged.plugin.json
